// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetoxInvariantError .from(message) should wrap the error message  1`] = `
"DetoxInvariantError: Should do better
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`DetoxInvariantError should append a Report-Issue hint 1`] = `
"Should do better
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;
